# bitbang-hal

./: Cargo.toml
src/: i2c.rs  lib.rs  serial.rs  spi.rs  spi_halfduplex.rs
