[package]
name = "bitbang-hal"
version = "0.3.3"
authors = ["Paul Sajna <sajattack@gmail.com>"]
edition = "2021"
description = "Implements embedded-hal traits by bitbanging"
license = "MIT"
repository = "https://github.com/sajattack/bitbang-hal"
readme = "README.md"
keywords = ["no_std", "embedded", "bitbang", "embedded-hal", "hal"]
categories = ["embedded", "no-std"]

[dependencies]
embedded-hal = "1.0"
fugit = "0.3"
nb = "1"
embedded-io = "0.6.1"
